<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Routes</string>
    <string name="action_settings">Settings</string>
    <string name="btn_locations">Locations</string>
    <string name="txt_main">Main</string>

    <!-- Sign Up Form-->
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="txt_dont_have_an_account">Don\'t have an account?</string>
    <string name="btn_sign_up_here"><u>Sign Up Here</u></string>
    <string name="btn_sign_up">Sign Up</string>

    <!-- Add Location Form -->
    <string name="txt_add_location">Add Location</string>
    <string name="txt_location_name">Location Name</string>
    <string name="txt_street_address">Street Address</string>
    <string name="txt_city">City</string>
    <string name="txt_state">State</string>
    <string name="txt_zip">Zip</string>
    <string name="btn_save">Save</string>

    <!-- Add Location Errors -->
    <string name="msg_error_add_location_name">Name cannot be blank</string>
    <string name="msg_error_add_location_address">Address cannot be blank</string>
    <string name="msg_error_add_location_city">City cannot be blank</string>
    <string name="msg_error_add_location_state">State cannot be blank</string>
    <string name="msg_error_add_location_zip">Zip cannot be blank</string>
    <string name="msg_add_location_success">Add Location Successful!</string>

</resources>
