<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#bebebe"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/txt_location_name"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>
        <EditText
                android:id="@+id/add_location_name_editText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_field"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:inputType="text"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/txt_street_address"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>
        <EditText
                android:id="@+id/add_location_street_editText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_field"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:paddingLeft="8dp"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/txt_city"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>
        <EditText
                android:id="@+id/add_location_city_editText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_field"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:paddingLeft="8dp"/>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <TextView
                        android:id="@+id/add_location_state_textView"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/txt_state"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"/>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/txt_zip"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <EditText
                        android:id="@+id/add_location_state_editText"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:background="@drawable/rounded_field"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="2dp"
                        android:paddingLeft="8dp"
                        android:layout_weight="1"/>
                <EditText
                        android:id="@+id/add_location_zip_editText"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:background="@drawable/rounded_field"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="2dp"
                        android:paddingLeft="8dp"
                        android:layout_weight="2"/>
        </LinearLayout>

    <Button
            android:id="@+id/add_location_save_button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/button_save"
            android:textColor="#ffffff"
            android:text="@string/btn_save"
            android:layout_margin="10dp"/>


</LinearLayout>