<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:text="@string/txt_add_location"
                android:textColor="@android:color/secondary_text_light"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/txt_location_name"
                android:textColor="@android:color/secondary_text_light"/>
        <EditText
                android:id="@+id/add_location_name_editText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:background="@drawable/rounded_field"
                android:textColor="@color/black"
                android:singleLine="true"
                android:inputType="text"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/txt_street_address"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/secondary_text_light"/>
        <EditText
                android:id="@+id/add_location_street_editText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:background="@drawable/rounded_field"
                android:textColor="@color/black"
                android:singleLine="true"
                android:inputType="text"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/txt_city"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/secondary_text_light"/>
        <EditText
                android:id="@+id/add_location_city_editText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:background="@drawable/rounded_field"
                android:textColor="@color/black"
                android:singleLine="true"
                android:inputType="text"/>
        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <TextView
                        android:id="@+id/add_location_state_textView"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/txt_state"
                        android:textColor="@android:color/secondary_text_light"/>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="2"
                        android:text="@string/txt_zip"
                        android:textColor="@android:color/secondary_text_light"/>
        </LinearLayout>
        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <EditText
                        android:id="@+id/add_location_state_editText"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:paddingTop="2dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="2dp"
                        android:paddingLeft="10dp"
                        android:background="@drawable/rounded_field"
                        android:textColor="@color/black"
                        android:singleLine="true"
                        android:inputType="text"/>
                <EditText
                        android:id="@+id/add_location_zip_editText"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="2"
                        android:paddingTop="2dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="2dp"
                        android:paddingLeft="10dp"
                        android:background="@drawable/rounded_field"
                        android:textColor="@color/black"
                        android:singleLine="true"
                        android:inputType="number"/>
        </LinearLayout>
        <Button
                android:id="@+id/add_location_save_button"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@drawable/button_save"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:text="@string/btn_save"
                android:layout_margin="10dp"/>
</LinearLayout>