<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80123123"
        android:gravity="center">
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:background="@drawable/rounded_field">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/txt_email"
                android:textColor="@android:color/secondary_text_light"/>
        <EditText
                android:id="@+id/signin_email_editText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:background="@drawable/rounded_field"
                android:textColor="@color/black"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/txt_password"
                android:textColor="@android:color/secondary_text_light"/>
        <EditText
                android:id="@+id/signin_password_editText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:background="@drawable/rounded_field"
                android:textColor="@color/black"
                android:singleLine="true"
                android:inputType="textPassword"/>
        <Button
                android:id="@+id/signin_submit_button"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@drawable/button_save"
                android:text="@string/btn_sign_in"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@android:color/secondary_text_light"
                android:text="@string/txt_or"/>
        <Button
                android:id="@+id/signin_goto_signup_button"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@drawable/button_save"
                android:text="@string/btn_sign_up"/>
    </LinearLayout>
</LinearLayout>